# NeuroCausal-RAG

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  Dockerfile  README.md  app.py  config.yaml  docker-compose.yml  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt
data/: __init__.py  climate_knowledge_base.py  example_datasets.py
examples/: climate_tr.md  legal_impact.md  quick_start.md  secret_merger.md  stress_chain.md  supply_chain_crisis.md
neurocausal_rag/: __init__.py  config.py  interfaces.py
neurocausal_rag/agents/: __init__.py  graph_agent.py  tools.py
neurocausal_rag/api/: __init__.py  app.py  models.py  routes.py
neurocausal_rag/causal/: inference.py
neurocausal_rag/core/: __init__.py  edge.py  graph.py  models.py  node.py
neurocausal_rag/embedding/: __init__.py  text.py
neurocausal_rag/entity/: __init__.py  linker.py  ner.py
neurocausal_rag/learning/: __init__.py  deep_discovery.py  discovery.py  entity_extraction.py  feedback.py  funnel_discovery.py  learner.py  pipeline.py  semantic_discovery.py  strength.py
neurocausal_rag/llm/: __init__.py  client.py
neurocausal_rag/memory/: __init__.py  store.py
neurocausal_rag/reasoning/: __init__.py  contradiction.py  temporal.py
neurocausal_rag/search/: __init__.py  decomposer.py  index.py  multi_hop.py  optimizer.py  retriever.py
neurocausal_rag/ui/: __init__.py
neurocausal_rag/visualization/: __init__.py  graph_viz.py
pages/: playground.py
scripts/: __init__.py  test_api.py  test_feedback_loop.py
tests/: __init__.py  conftest.py
tests/fixtures/: sample_docs.json  scenarios.json
tests/integration/: __init__.py  test_end_to_end.py  test_pipeline.py
tests/unit/: __init__.py  test_api_routes.py  test_config.py  test_contradiction.py  test_decomposer.py  test_entity_linker.py  test_graph.py  test_imports.py  test_llm_client.py  test_memory.py  test_multi_hop.py  test_optimizer.py  test_retriever.py  test_temporal.py
